--- a/src/Forest.UI/Resources/Styles.xaml
+++ b/src/Forest.UI/Resources/Styles.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:ui="clr-namespace:AdonisUI;assembly=AdonisUI">
+                    xmlns:ui="clr-namespace:AdonisUI;assembly=AdonisUI"
+                    xmlns:controls="clr-namespace:Forest.UI.Controls">
 
     <Style TargetType="ToolTip">
         <Setter Property="Foreground" Value="{DynamicResource {x:Static ui:Brushes.ForegroundBrush}}"/>
@@ -18,5 +19,26 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style x:Key="MainPageLinkButton"
+           TargetType="controls:LinkButton">
+
+        <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
+        
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver"
+                     Value="True">
+                
+                <Trigger.Setters>
+                    <Setter Property="RenderTransform">
+                        <Setter.Value>
+                            <ScaleTransform ScaleX="1.1"
+                                            ScaleY="1.1"/>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger.Setters>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
